<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cc.allio</groupId>
    <artifactId>uno</artifactId>
    <packaging>pom</packaging>
    <version>1.1.8</version>
    <description>构建大型应用需要的基本能力 --- all in one</description>
    <url>https://github.com/b6688c/uno</url>

    <developers>
        <developer>
            <name>j.x</name>
            <email>jiangw1027@gmail.com</email>
        </developer>
    </developers>

    <modules>
        <module>uno-bom</module>
        <module>uno-core</module>
        <module>uno-plugins</module>
        <module>uno-test</module>
        <module>uno-starters</module>
        <module>uno-demo</module>
        <module>uno-auto</module>
        <module>uno-web</module>
        <module>uno-data</module>
        <module>uno-gis</module>
        <module>uno-rule</module>
        <module>uno-http</module>
        <module>uno-kafka</module>
        <module>uno-netty</module>
        <module>uno-sequential</module>
        <module>uno-websocket</module>
    </modules>

    <properties>
        <java.version>22</java.version>
        <drools.version>9.44.0.Final</drools.version>
        <reactor-bom>2023.0.3</reactor-bom>
        <spring.boot.version>3.2.4</spring.boot.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-plugin.version>3.8.1</maven-plugin.version>
        <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>cc.allio</groupId>
                <artifactId>uno-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-bom</artifactId>
                <version>${reactor-bom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-bom</artifactId>
                <version>${drools.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <!--  输出Annotation Processor所以级别的日志 -->
                        <showWarnings>true</showWarnings>
                        <!-- 传入debug参数-->
                        <compilerArgument>-Adebug</compilerArgument>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <!-- 打jar包 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </testResource>
            <testResource>
                <directory>src/test/java</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </testResource>
        </testResources>
    </build>

    <profiles>
        <profile>
            <id>develop</id>
            <build>
                <plugins>
                    <!-- 打source包 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven-source-plugin.version}</version>
                        <configuration>
                            <attach>true</attach>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>compile</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <repository>
            <id>rdc-releases</id>
            <name>User Project Release</name>
            <url>https://packages.aliyun.com/maven/repository/2300285-release-cAc7WJ/</url>
        </repository>
        <snapshotRepository>
            <id>rdc-snapshots</id>
            <name>User ProjectSNAPSHOTS</name>
            <url>https://packages.aliyun.com/maven/repository/2300285-snapshot-JAW5GT/</url>
        </snapshotRepository>
    </distributionManagement>
</project>